--- a/src/pages/management/locations.astro
+++ b/src/pages/management/locations.astro
@@ -63,7 +63,7 @@ const locations = [
             <article
                 class="top-margin medium-elevate medium-width center center-align middle-align surface"
             >
-                <h4 class="freeman-regular">Locations management</h4>
+                <h2 class="freeman-regular">Locations management 📍</h2>
             </article>
         </div>
 
@@ -88,7 +88,7 @@ const locations = [
         <div class="center top-margin">
             <a
                 href="/dashboard"
-                class="white round horizontal-padding small-padding small-text large primary-hover center"
+                class="button white black-text round primary-hover center"
             >
                 Add a new location
             </a>
